--- a/window.html
+++ b/window.html
@@ -14,18 +14,7 @@
 <section id="main">
     <button id="LeituraX" class="btn">Leitura X</button>
     <button id="AbreCupom" class="btn">Abre Cupom</button>
-  <!--<nav>
-    <h2>Google Drive Uploader</h2>
-    <button class="btn" data-ng-click="fetchDocs()">Refresh</button>
-    <button class="btn" id="close-button" title="Close">x</button>
-  </nav>
-
-  <ul>
-    <li data-ng-repeat="doc in docs">
-      <img data-ng-src="{{doc.icon}}"> <a href="{{doc.alternateLink}}">{{doc.title}}</a>  {{doc.size}}
-      <span class="date">{{doc.updatedDate}}</span>
-    </li>
-  </ul>-->
+    <button id="CancelaCupom" class="btn">Cancela Cupom</button>
 </section>
 </body>
 </html>
