--- a/window.html
+++ b/window.html
@@ -15,6 +15,8 @@
     <button id="LeituraX" class="btn">Leitura X</button>
     <button id="AbreCupom" class="btn">Abre Cupom</button>
     <button id="CancelaCupom" class="btn">Cancela Cupom</button>
+    <button id="Push" class="btn">Push Data</button>
+    <button id="TestWindow" class="btn">Test Window</button>
 </section>
 </body>
 </html>
