--- a/window.html
+++ b/window.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" media="all" href="bootstrap/css/bootstrap.css">
 <link rel="stylesheet" media="all" href="css/main.css">
 <base target="_blank">
+<script src="js/database.js"></script>
 <script src="js/util.js"></script>
 <script src="js/app.js"></script>
 <!-- add the jQuery script -->
@@ -59,6 +60,9 @@
     <img src="images/refresh.png" id="Push" width="50" height="50" style="cursor: pointer;"/>
     <img src="images/shopping_cart.png" id="Venda" width="50" height="50" style="cursor: pointer;"/>
     <div id="jqxgrid"></div>
+    <br />
+    <button id="IndexedDB" class="btn">Indexed DB</button>
+    <button id="AddProd" class="btn">Add Prod</button>
 </section>
 </body>
 </html>
