--- a/produtos.html
+++ b/produtos.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <!--<meta charset="utf-8" /> -->
-<title>JS ECF</title>
+<title>Produtos</title>
 <link rel="stylesheet" media="all" href="bootstrap/css/bootstrap.css">
 <link rel="stylesheet" media="all" href="css/main.css">
 <base target="_blank">
 <script src="js/database.js"></script>
 <script src="js/util.js"></script>
-<script src="js/app.js"></script>
+<script src="js/produto.js"></script>
 <!-- add the jQuery script -->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>	
 <!-- add the jQWidgets framework -->
@@ -54,15 +54,11 @@
             </ul>
         </div>
     </div>
-    <button id="LeituraX" class="btn">Leitura X</button>
-    <button id="AbreCupom" class="btn">Abre Cupom</button>
-    <button id="CancelaCupom" class="btn">Cancela Cupom</button>
     <img src="images/refresh.png" id="Push" width="50" height="50" style="cursor: pointer;"/>
-    <img src="images/shopping_cart.png" id="Venda" width="50" height="50" style="cursor: pointer;"/>
+    <input type="text" id="txtProd" />
+    <button id="Procurar">Procurar</button>
     <div id="jqxgrid"></div>
     <br />
-    <button id="IndexedDB" class="btn">Indexed DB</button>
-    <div id="prod"></div>
 </section>
 </body>
 </html>
